apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      # init container which creates directories for subpaths
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.10 # {"$imagepolicy": "flux-system:jellyfin"}
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add: ["IPC_LOCK"]
          volumeMounts:
            - name: media
              mountPath: /media
              readOnly: true
            - name: config
              mountPath: /config
              subPath: jellyfin/config
            - name: config
              mountPath: /cache
              subPath: jellyfin/cache

      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: you-are-a-pirate-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
