apps/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-http
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: web
      kind: Gateway
  
  hostnames:
    - jellyfin.homelab
  
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      
      backendRefs:
        - name: jellyfin
          namespace: jellyfin
          port: 8096

      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: ipallowlist
