apps/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: jellyfin-ingressroute
    namespace: jellyfin
spec:
    entryPoints:
        - web
    routes:
        - match: Host("jellyfin.homelab")
          kind: Rule
          services:
              - name: jellyfin
                port: 8096
